# dechst

./: Cargo.toml  README.md  justfile
crates/dechst/: Cargo.toml
crates/dechst-chunker/: Cargo.toml
crates/dechst-chunker/src/: fastcdc.rs  lib.rs
crates/dechst-cli/: Cargo.toml
crates/dechst-cli/src/: format.rs  lib.rs  main.rs  password.rs  util.rs
crates/dechst-cli/src/command/: cat.rs  completions.rs  init.rs  list.rs  man.rs  md.rs  mod.rs  selfupdate.rs
crates/dechst-cli/src/opts/: global.rs  mod.rs  process.rs  repo.rs
crates/dechst/src/: id.rs  lib.rs  os.rs  path.rs  typed.rs.backup
crates/dechst/src/backend/: ext.rs  local.rs  local2.rs  mod.rs  typed.rs
crates/dechst/src/os/: raw.rs  unix.rs  windows.rs
crates/dechst/src/process/: format.rs  mod.rs  pipeline.rs
crates/dechst/src/process/chunk/: mod.rs
crates/dechst/src/process/compress/: mod.rs
crates/dechst/src/process/encrypt/: mod.rs
crates/dechst/src/process/identify/: mod.rs
crates/dechst/src/process/verify/: mod.rs
crates/dechst/src/repo/: config.rs  index.rs  key.rs  lock.rs  mod.rs
crates/dechst/src/source/: fs.rs  mod.rs  stdin.rs
src/: id.rs  lib.rs
