[package]
name = "dechst-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive", "env"] }
dechst = { version = "0.1.0", path = "../dechst" }
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["serde", "std"] }
merge = "0.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
simplelog = "0.12.0"
