[package]
name = "dechst"
version = "0.1.0"
edition = "2021"

[features]
default = ["identifier-all", "compression-all", "encryption-all", "verifier-all", "formatter-all"]

identifier-all = ["identifier-blake3"]
identifier-blake3 = ["blake3"]

compression-all = ["compression-brotli"]
compression-brotli = ["brotli"]

encryption-all = ["encryption-chacha20"]
encryption-chacha20 = ["chacha20"]

verifier-all = ["verifier-blake3"]
verifier-blake3 = ["blake3"]

formatter-all = ["formatter-cbor"]
formatter-cbor = ["ciborium"]

[dependencies]
argon2 = { version = "0.4.1", features = ["std", "zeroize", "rayon", "parallel"] }
binrw = "0.11.1"
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
hex = "0.4.3"
rand = { version = "0.8.5", features = ["simd_support"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = { version = "0.11.9", features = ["alloc"] }
serde_with = "2.2.0"
thiserror = "1.0.38"
zeroize = { version = "1.5.7", features = ["derive", "std", "serde"] }

# Identify / Verifier
blake3 = { version = "1.3.3", optional = true }

# Compress
brotli = { version = "3.3.4", optional = true }

# Encryption
chacha20 = { version = "0.9.0", features = ["std", "zeroize"], optional = true }

# Format
ciborium = { version = "0.2.0", optional = true }

# Backend
walkdir = "2.3.2"
whoami = "1.3.0"
log = "0.4.17"

[target.'cfg(target_family = "unix")'.dependencies]
users = "0.11"

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
